# ShortMCP

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.sh  server.py  video_generator.py
